fix: AmountPercentAverage 오차 수정 하는 로직 반영 및 Average percent long 으로 변경, 테스트 코드 작성